# cmakize

./: CMakeLists.txt  README.md  local-build.cmd
